# Q3DE

./: .gitignore  README.md  license.docx
fig10_q3de_throughput/: README.md  build.sh  micro_spawn.py  micro_stat.py
fig10_q3de_throughput/src/: main.cpp
fig3_8_logical_error_rate_with_anomaly/: CMakeLists.txt  README.md  build.sh  plot_fig3.py  plot_fig8.py  plot_validate.py  spawn_fig3.py  spawn_fig8_1.py  spawn_fig8_2.py
fig3_8_logical_error_rate_with_anomaly/src/: CMakeLists.txt  common.hpp  correction_uniform.cpp  correction_weighted.cpp  main.cpp  make_error.cpp  visualize.cpp
fig7_anomaly_detection/: README.md
fig7_anomaly_detection/evaluator/: README.md  _util_content.py  _util_count_threshold.py  _util_fileproperty.py  _util_mumap.py  _util_mumap_analysis.py  _util_plot_histogram.py  proc0_spawn_allanomaly.py  proc1_calculate_window.py  proc2_spawn_latency.py  proc3_calculate_trajectory.py  proc4_calculate_detection_latency.py  proc5_calculate_position_error.py  proc6_plot_micro_figure.py  proc7_plot_misc.py  proc_all.sh
fig7_anomaly_detection/generator/: build.bat  build.sh
fig7_anomaly_detection/generator/src/: CMakeLists.txt  decoder.hpp  error_lattice.hpp  main_anomaly.cpp  main_anomaly_long.cpp  position.hpp  random.hpp  syndrome_lattice.hpp  syndrome_lattice_base.hpp
fig9_qubit_reduction_by_q3de/: README.md  build.sh
fig9_qubit_reduction_by_q3de/calc/: _spawn_common.py  plot_all.py  spawn_freq.py  spawn_lifetime.py  spawn_size.py
fig9_qubit_reduction_by_q3de/src/: main.cpp
tab4_fpga_implementation/: .README.md.swp  README.md
tab4_fpga_implementation/40-BASE/: decoder.h  tbench.cpp
tab4_fpga_implementation/40-BASE/benchmark/: tbench.h  tbench_util.cpp  tbench_visualize.cpp
tab4_fpga_implementation/40-BASE/benchmark/graph_idling/: stabx_distance_5_cycle_5.boundary  stabx_distance_5_cycle_5.boundary_path  stabx_distance_5_cycle_5.node  stabx_distance_5_cycle_7.boundary_path  stabx_distance_5_cycle_7.node  stabx_distance_7_cycle_7.edge  stabx_distance_7_cycle_9.boundary_path  stabz_distance_5_cycle_5.boundary  stabz_distance_5_cycle_5.edge  stabz_distance_5_cycle_5.node  stabz_distance_5_cycle_9.boundary_path  stabz_distance_7_cycle_5.boundary  stabz_distance_7_cycle_5.node  stabz_distance_7_cycle_7.node  stabz_distance_9_cycle_5.boundary  stabz_distance_9_cycle_7.edge  stabz_distance_9_cycle_7.node
tab4_fpga_implementation/40-Q3DE/: decoder.h  tbench.cpp
tab4_fpga_implementation/40-Q3DE/benchmark/: CMakeLists.txt  tbench.h  tbench_io.cpp  tbench_match.cpp  tbench_visualize.cpp
tab4_fpga_implementation/40-Q3DE/benchmark/graph_idling/: stabx_distance_5_cycle_9.boundary_path  stabx_distance_5_cycle_9.edge  stabx_distance_7_cycle_5.boundary  stabx_distance_7_cycle_5.boundary_path  stabx_distance_7_cycle_5.edge  stabx_distance_7_cycle_7.boundary  stabx_distance_9_cycle_5.boundary_path  stabx_distance_9_cycle_7.edge  stabx_distance_9_cycle_7.node  stabx_distance_9_cycle_9.boundary  stabz_distance_5_cycle_7.edge  stabz_distance_7_cycle_9.edge  stabz_distance_9_cycle_5.boundary_path
tab4_fpga_implementation/80-BASE/: decoder.cpp  decoder.h  tbench.cpp
tab4_fpga_implementation/80-BASE/benchmark/: build_graph.py  main.cpp  tbench_io.cpp
tab4_fpga_implementation/80-BASE/benchmark/graph_idling/: stabx_distance_5_cycle_5.edge  stabx_distance_5_cycle_7.boundary  stabx_distance_5_cycle_9.node  stabx_distance_7_cycle_5.node  stabz_distance_5_cycle_7.boundary_path  stabz_distance_5_cycle_9.edge  stabz_distance_5_cycle_9.node  stabz_distance_7_cycle_7.boundary  stabz_distance_9_cycle_7.boundary_path  stabz_distance_9_cycle_9.boundary  stabz_distance_9_cycle_9.node
tab4_fpga_implementation/80-Q3DE/: decoder.cpp  decoder.h  tbench.cpp
tab4_fpga_implementation/80-Q3DE/benchmark/graph_idling/: stabx_distance_7_cycle_7.boundary_path  stabx_distance_7_cycle_7.node  stabx_distance_7_cycle_9.edge  stabx_distance_7_cycle_9.node  stabx_distance_9_cycle_5.edge  stabx_distance_9_cycle_9.edge  stabz_distance_5_cycle_7.node  stabz_distance_7_cycle_7.boundary_path
tab4_fpga_implementation/automation/: README.md  eval_q3de.py  run.py  run_with_arg.py
tab4_fpga_implementation/automation/vitis_hls_automation/: __init__.py  config.py  execute_script.py  fetch_result.py
tab4_fpga_implementation/with_anomaly/: decoder.cpp  decoder.h
tab4_fpga_implementation/with_anomaly/benchmark/graph_idling/: stabx_distance_5_cycle_9.boundary  stabx_distance_9_cycle_5.boundary  stabx_distance_9_cycle_7.boundary  stabx_distance_9_cycle_7.boundary_path  stabx_distance_9_cycle_9.node  stabz_distance_5_cycle_7.boundary  stabz_distance_5_cycle_9.boundary  stabz_distance_7_cycle_5.boundary_path  stabz_distance_7_cycle_5.edge  stabz_distance_7_cycle_9.boundary  stabz_distance_9_cycle_5.edge  stabz_distance_9_cycle_9.boundary_path  stabz_distance_9_cycle_9.edge
tab4_fpga_implementation/without_anomaly/: decoder.h  tbench.cpp
tab4_fpga_implementation/without_anomaly/benchmark/: tbench_match.cpp
(+10 files in other folders)
